# greentic-demo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY_FIX_REPORT.md  codex-prompt.txt  pr-changed-files.txt  pr-comment.md
.githooks/: pre-push
.github/workflows/: ci.yml  codex-security-fix.yml  publish.yml
apps/quickstart-app/: pack.lock.cbor  pack.yaml
apps/quickstart-app/components/: component_events2msg.manifest.json  component_msg2events.manifest.json
apps/quickstart-app/flows/: on_event.ygtc  on_event.ygtc.resolve.json  on_event.ygtc.resolve.summary.json  on_message.ygtc  on_message.ygtc.full.bak  on_message.ygtc.resolve.json  on_message.ygtc.resolve.summary.json
ci/: local_check.sh
cmd/greentic-demo/: main.rs
crates/: README.md
crates/car-sales-demo/: Cargo.toml
crates/car-sales-demo/bundle/: bundle.yaml
crates/car-sales-demo/landing-page/: index.html
crates/car-sales-demo/src/: lib.rs
crates/cards-demo/: Cargo.toml  build-answer.json  gtc_pack_create_wizard_answers.json
crates/cards-demo/assets/: card1.json  card2.json  card3.json
crates/cards-demo/src/: lib.rs
crates/cisco-live-demo/: Cargo.toml
crates/cloud-deploy-demo/: Cargo.toml  README.md
crates/deep-research-demo/: Cargo.toml  README.md  build-answer.json  build_pack.sh  pack_answers.json
crates/github-mcp-demo/: Cargo.toml  build-answer.json  gtc_wizard_answers.json
crates/greentic-ai-demo/: Cargo.toml
crates/helpdesk-itsm-demo/: Cargo.toml  README.md  build-answer.json  gtc_flow_wizard_answers.json  gtc_pack_create_wizard_answers.json  gtc_wizard_answers.json
crates/hr-onboarding-demo/: Cargo.toml  README.md  build-answer.json  gtc_pack_create_wizard_answers.json  gtc_wizard_answers.json  pack.lock.cbor
crates/incident-demo/: Cargo.toml  README.md  build-answer.json  gtc_flow_wizard_answers.json  gtc_pack_create_wizard_answers.json  gtc_wizard_answers.json
crates/invoice-approval-demo/: gtc_pack_create_wizard_answers.json
crates/quickstart-demo/: Cargo.toml  README.md  build-answer.json  gtc_flow_wizard_answers.json  gtc_pack_create_wizard_answers.json  gtc_wizard_answers.json
crates/quickstart-event-demo/: Cargo.toml  README.md  build-answer.json  gtc_wizard_answers.json
crates/redbutton-demo/: Cargo.toml  README.md  build-answer.json  gtc_flow_wizard_answers.json  gtc_pack_create_wizard_answers.json  gtc_wizard_answers.json
crates/redbutton-demo/component-betterstack-incident/: Cargo.toml  Makefile  README.md
crates/redbutton-demo/component-betterstack-incident/schemas/: component.schema.json
crates/redbutton-demo/component-betterstack-incident/src/: lib.rs
crates/redbutton-demo/component-betterstack-incident/tests/: conformance.rs
crates/redbutton-demo/component-random/: Cargo.toml  LICENSE  Makefile  README.md
crates/redbutton-demo/component-random/schemas/: component.schema.json
crates/redbutton-demo/component-random/src/: lib.rs  qa.rs
crates/redbutton-demo/component-random/tests/: conformance.rs
crates/redbutton-demo/greentic-http2play/: Cargo.toml  Makefile  README.md
crates/redbutton-demo/greentic-http2play/schemas/: component.schema.json
crates/redbutton-demo/greentic-http2play/src/: lib.rs
crates/redbutton-demo/greentic-http2play/tests/: conformance.rs
crates/sales-crm-demo/: Cargo.toml  README.md  build-answer.json  gtc_flow_wizard_answers.json  gtc_pack_create_wizard_answers.json  gtc_wizard_answers.json
crates/supply-chain-demo/: Cargo.toml  README.md  build-answer.json  gtc_flow_wizard_answers.json  gtc_main_flow_wizard_answers.draft.json  gtc_order_tracking_flow_wizard_answers.draft.json  gtc_pack_create_wizard_answers.draft.json  gtc_pack_create_wizard_answers.json  gtc_pack_wizard_answers.json  gtc_reorder_flow_wizard_answers.draft.json  gtc_wizard_answers.json
crates/telco-x-demo/: Cargo.toml  README.md  build-answer.json  prepare_demo.sh
crates/telco-x-demo/component-telco-present/: Cargo.toml  component.manifest.json
crates/telco-x-demo/component-telco-present/src/: i18n.rs  lib.rs  qa.rs
crates/weather-mcp-demo/: Cargo.toml  build-answer.json  gtc_wizard_answers.json
demos/: cisco-live-create-answers.json  cloud-deploy-demo-create-answers.json  cloud-deploy-demo-setup-answers.json  deep-research-demo-aws-setup-answers.json  deep-research-demo-create-answers.json  deep-research-demo-setup-answers.json  events-webhook.gtpack  github-mcp-create-answers.json  github-mcp-setup-answers.json  greentic-ai-create-answers.json  greentic-ai-setup-answers.json  helpdesk-itsm-create-answers.json  helpdesk-itsm-setup-answers.json  helpdesk-itsm.gtpack  hr-onboarding-create-answers.json  hr-onboarding-setup-answers.json  hr-onboarding.gtpack  incident-create-answers.json  incident-demo.gtpack  incident-setup-answers.json  invoice-approval-create-answers.json  invoice-approval-setup-answers.json  messaging-webchat-gui.gtpack  quickstart-create-answers.json  quickstart-event-create-answers.json  quickstart-event-setup-answers.json  quickstart-setup-answers.json  quickstart.gtpack  redbutton-create-answers.json  redbutton-demo.gtpack  redbutton-setup-answers.json  sales-crm-create-answers.json  sales-crm-setup-answers.json  sales-crm.gtpack  state-memory.gtpack  supply-chain-create-answers.json  supply-chain-setup-answers.json  supply-chain.gtpack  telco-x-demo-create-answers.json  telco-x-demo-setup-answers.json  (+4 more)
demos/invoice-approval/: README.md
packs/helpdesk-itsm/: bindings.yaml  greentic.demo.yaml  pack.yaml  wizard-answers.yaml
packs/hr-onboarding/: bindings.yaml  greentic.demo.yaml  pack.yaml  wizard-answers.yaml
packs/sales-crm/: README.md  bindings.yaml  greentic.demo.yaml  pack.yaml  wizard-answers.yaml
packs/supply-chain/: README.md  bindings.yaml  greentic.demo.yaml  pack.yaml  wizard-answers.yaml
scripts/: migrate_demo_assets.sh  package_demos.sh  publish_demo.sh  publish_demo_bundles_oci.sh  test_demo_json_remote_urls.py  test_migrate_demo_assets.sh  tokenize-cards.py
src/: lib.rs  loader.rs  path_safety.rs  runner_bridge.rs  telemetry.rs
tests/: cli_help.rs
tools/: i18n_extract_cards.py
(+618 files in other folders)
