[workspace]
members = [
    "crates/*",
]
# WASM component sub-crates require greentic-interfaces WIT root and
# wasm32-wasip2 target; they are built separately, not via workspace checks.
exclude = [
    "crates/*/component-*",
    "crates/*/greentic-*",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-demo"
publish = false

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
