[workspace]
members = [
    "crates/cards-demo",
    "crates/cloud-deploy-demo",
    "crates/deep-research-demo",
    "crates/github-mcp-demo",
    "crates/greentic-ai-demo",
    "crates/helpdesk-itsm-demo",
    "crates/hr-onboarding-demo",
    "crates/incident-demo",
    "crates/quickstart-demo",
    "crates/quickstart-event-demo",
    "crates/redbutton-demo",
    "crates/sales-crm-demo",
    "crates/supply-chain-demo",
    "crates/weather-mcp-demo",
]
# WASM component sub-crates require greentic-interfaces WIT root and
# wasm32-wasip2 target; they are built separately, not via workspace checks.
exclude = [
    "crates/redbutton-demo/component-betterstack-incident",
    "crates/redbutton-demo/component-http",
    "crates/redbutton-demo/component-random",
    "crates/redbutton-demo/greentic-http2play",
]
resolver = "3"

[workspace.package]
version = "0.1.66"
edition = "2024"
license = "MIT"
repository = "https://github.com/greenticai/greentic-demo"
publish = false

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
