[package]
name = "component-random"
version = "1.1.0-dev.0"
edition = "2024"
license = "MIT"
rust-version = "1.91"
description = "Greentic component component-random"
repository = "https://github.com/component-random"
build = "build.rs"
authors = ["maarten"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component@0.6.0"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
greentic-interfaces-guest = { version = ">=1.1.0-dev, <1.2.0-0", default-features = false, features = ["component-v0-6"] }
greentic-types = { version = ">=1.1.0-dev, <1.2.0-0" }

[build-dependencies]
serde_json = "1"
greentic-interfaces = { version = ">=1.1.0-dev, <1.2.0-0", default-features = false }
greentic-types = { version = ">=1.1.0-dev, <1.2.0-0" }

[dev-dependencies]
serde_json = "1"
