[package]
name = "greentic-http2play"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.91"
description = "Greentic component greentic-http2play"
repository = "https://github.com/greentic-http2play"
build = "build.rs"
authors = ["maarten"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component]
package = "greentic:component"

[package.metadata.component.target]
world = "greentic:component/component@0.6.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-v0-6", "http-client"] }
greentic-types = { version = "0.4" }

[build-dependencies]
serde_json = "1"
greentic-interfaces = { version = "0.4", default-features = false }
greentic-types = { version = "0.4" }

[dev-dependencies]
serde_json = "1"
